crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@363.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_sub VALUES (8,5,'9149741854.07519796181214339720582405769040995916571800906099546787135686773033654199973299973665332349235940513509308862104153230025723587829513380101663750625024853263344909355177280161504414335005574882649025508632900995595004153086358670541462762210415346958050909878501048483523600711486406055424807840429541335391538322886495085448421556770991545781035298449067051916630343957356635391594362639819978677032855590055900561501350354631803808000307050416047072513406855040715556454205065332997338225626635780147287003130754254277103928406089109802521803537038957372612837169223905290912251006321930223154562110264217937');"
---
InsertStmt@0..662
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_sub"
  Whitespace@23..24 " "
  SelectStmt@24..660
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..660
      AConst@32..33
        Iconst@32..33 "8"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "5"
      Ascii44@35..36 ","
      AConst@36..660
        Sconst@36..660 "'9149741854.075197961 ..."
  Ascii41@660..661 ")"
  Ascii59@661..662 ";"

