crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@364.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_mul VALUES (8,5,'-5546455599206321494.0676583421119904300307105296377723816472192007866147764761501865875232824814135783697976183493106885436876081315217834621720906478074798596116645640251460842350553806256223963023430631066024389364515688765194373161385579258482225808660340732705687558150699172147896486727530192499184101617379930846663835628510376484675411350654979679181852179924386290069790336316958202582966248703889464308649631486542724072047294216362186036638115240070658004553260251510288423749333873893917690832829128021808383128393431810674177390352413548658782609064839524756041501835115152819802758773711821322162752064589750295542985780512921839490040396053737870038534216948323935020460307350020911362024271167085905714873548388570602799432705061561572854498075600');"
---
InsertStmt@0..803
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_mul"
  Whitespace@23..24 " "
  SelectStmt@24..801
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..801
      AConst@32..33
        Iconst@32..33 "8"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "5"
      Ascii44@35..36 ","
      AConst@36..801
        Sconst@36..801 "'-5546455599206321494 ..."
  Ascii41@801..802 ")"
  Ascii59@802..803 ";"

